--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,6 +27,19 @@
      <string>T1 - Semáforo</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="bT2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T2 - Cartas</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
