--- a/T2/t2cartas.ui
+++ b/T2/t2cartas.ui
@@ -13,34 +13,11 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="bEliminarDuplicados">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>260</y>
-     <width>121</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Quitar duplicados</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="tValor">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>20</y>
-     <width>113</width>
-     <height>23</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
+     <x>10</x>
+     <y>30</y>
      <width>57</width>
      <height>15</height>
     </rect>
@@ -49,60 +26,47 @@
     <string>Valor:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLineEdit" name="tValor">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>70</y>
-     <width>57</width>
-     <height>15</height>
+     <x>70</x>
+     <y>30</y>
+     <width>113</width>
+     <height>23</height>
     </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Original:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>70</y>
-     <width>101</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Sin Duplicados</string>
    </property>
   </widget>
   <widget class="QListWidget" name="lwOriginal">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
-     <width>111</width>
-     <height>151</height>
+     <y>80</y>
+     <width>101</width>
+     <height>161</height>
     </rect>
    </property>
   </widget>
   <widget class="QListWidget" name="lwNew">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>90</y>
-     <width>111</width>
-     <height>151</height>
+     <x>280</x>
+     <y>80</y>
+     <width>101</width>
+     <height>161</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="bQuitar">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>260</y>
+     <width>131</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Quitar Duplicados</string>
    </property>
   </widget>
  </widget>
