--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QPushButton" name="bT1">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>121</width>
-      <height>23</height>
+      <x>10</x>
+      <y>10</y>
+      <width>161</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -30,14 +30,27 @@
    <widget class="QPushButton" name="bT2">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>60</y>
-      <width>121</width>
-      <height>23</height>
+      <width>161</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>T2 - Cartas</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bT3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T3 - Lista de Arreglos</string>
     </property>
    </widget>
   </widget>
