--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,6 +53,19 @@
      <string>T3 - Lista de Arreglos</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="bT3_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T4 - Apuntadores</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
