--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,7 +53,7 @@
      <string>T3 - Lista de Arreglos</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="bT3_2">
+   <widget class="QPushButton" name="bT4">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -64,6 +64,32 @@
     </property>
     <property name="text">
      <string>T4 - Apuntadores</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bT6">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>60</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T6 - Pilas</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bT5">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>10</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T5 - Colas</string>
     </property>
    </widget>
   </widget>
