--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -105,6 +105,19 @@
      <string>T7 - Cursores</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="bT8">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>160</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T8 - Conjuntos</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
