--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>325</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>60</y>
+      <y>10</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QPushButton" name="bT5">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>10</y>
+      <x>10</x>
+      <y>210</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>110</y>
+      <y>60</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -109,13 +109,26 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>160</y>
+      <y>110</y>
       <width>161</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>T8 - Conjuntos</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bT9">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>160</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T9 - Hash</string>
     </property>
    </widget>
   </widget>
