--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>325</height>
+    <width>412</width>
+    <height>338</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -131,14 +131,27 @@
      <string>T9 - Hash</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="bT10">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>210</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T10 - Árboles</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
-     <height>20</height>
+     <width>412</width>
+     <height>27</height>
     </rect>
    </property>
   </widget>
